<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.septem.shakefun.MainActivity">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="60sp"
                android:visibility="invisible"
                android:textColor="#E64A19"
                android:id="@+id/text_ready" />

        <com.dd.CircularProgressButton
                android:id="@+id/btn_start"
                android:layout_width="196dp"
                android:layout_height="64dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:cpb_cornerRadius="48dp"
                app:cpb_textComplete="@string/timesUp"
                app:cpb_textIdle="@string/start" />

        <com.dd.CircularProgressButton
                android:id="@+id/btn_rank"
                android:layout_width="196dp"
                android:layout_height="64dp"
                android:layout_below="@+id/btn_exit"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:cpb_cornerRadius="48dp"
                android:visibility="invisible"
                app:cpb_iconError="@drawable/failed"
                app:cpb_textIdle="@string/rank" />

        <com.dd.CircularProgressButton
                android:id="@+id/btn_exit"
                android:layout_width="196dp"
                android:layout_height="64dp"
                android:layout_below="@+id/btn_start"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:visibility="visible"
                app:cpb_cornerRadius="48dp"
                app:cpb_iconError="@drawable/failed"
                app:cpb_textIdle="@string/exit" />

        <com.dd.CircularProgressButton
                android:id="@+id/btn_feedback"
                android:layout_width="196dp"
                android:layout_height="64dp"
                android:layout_below="@+id/btn_rank"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:visibility="invisible"
                app:cpb_cornerRadius="48dp"
                app:cpb_iconError="@drawable/failed"
                app:cpb_textIdle="@string/feedback" />

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageShake"
                android:src="@drawable/img_shake"
                android:layout_above="@+id/btn_start"
                android:scaleType="centerCrop"
                android:layout_alignRight="@+id/btn_start" android:layout_alignEnd="@+id/btn_start"
                android:layout_alignLeft="@+id/btn_start" android:layout_alignStart="@+id/btn_start"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips"
                android:textColor="#9c27b0"
                android:id="@+id/tips"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        <com.septem.shakefun.RunningTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#f50057"
                android:textSize="140sp"
                android:layout_marginBottom="20dp"
                android:id="@+id/score"
                android:visibility="invisible"
                android:layout_alignBottom="@+id/imageShake"
                android:layout_centerHorizontal="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/level"
                android:textSize="20sp"
                android:visibility="invisible"
                android:layout_alignTop="@+id/score"
                android:layout_marginBottom="10dp"/>



</RelativeLayout>
